# Theory_Parall

labs/task1/: CMakeLists.txt  README.md  main.cpp
labs/task2/: README.md
labs/task2/1/: 1.cpp  CMakeLists.txt
labs/task2/1/results/: graph.ipynb  results1.txt  results2.txt
labs/task2/2/: 2.cpp  CMakeLists.txt
labs/task2/2/results/: graph.ipynb  results1.txt  results2.txt
labs/task2/3/: 3.cpp  CMakeLists.txt  var1_for_omp.cpp  var2_parallel_omp.cpp  var3_shedule_omp.cpp
labs/task2/3/results/: graph.ipynb  results1_1.txt  results1_2.txt  results2_1.txt  results2_2.txt  results_Schedule.txt
labs/task2/3/results/var1/: graph.ipynb  results1.txt  results2.txt
labs/task2/3/results/var2/: graph.ipynb  results1.txt  results2.txt
labs/task2/3/results/var3/: graph.ipynb  results1.txt  results2.txt
labs/task3/: README.md
labs/task3/1/: CMakeLists.txt  jthread.cpp  thread.cpp
labs/task3/1/results/: graph.ipynb
labs/task3/1/results/jthread/: results1.txt  results2.txt
labs/task3/1/results/thread/: results1.txt  results2.txt
labs/task3/2/: checker  checker.cpp  server  server.cpp  start_checker.sh
labs/task3/2/results/: client1_sin.txt  client2_pow.txt  client3_add.txt
sems/: 1  1.cpp
